<resources>
    <string name="app_name">MailBox App</string>
    <string name="choose_account">Choose Account</string>
    <string name="preferences_file_name">com.cognition.android.mailboxapp.PREFERENCES_FILE</string>
    <string name="this_app_requires_google_play_services">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="inbox">Inbox</string>
    <string name="search">Search</string>
    <string name="default_m">M</string>
    <string name="from">From</string>
    <string name="default_date">21/04/2018</string>
    <string name="subject">Subject</string>
    <string name="snippet">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</string>
    <string name="app_requires_auth">This app requires your authorization to access your gmail account so that it can work.</string>
    <string name="device_is_offline">Device is offline</string>
    <string name="to_me">to me</string>
    <string name="an_error_occurred">An error occurred.</string>
    <string name="retry">Retry</string>
    <string name="send">Send</string>
    <string name="to">To</string>
    <string name="compose_email">Compose email</string>
    <string name="compose">Compose</string>
    <string name="message_sent">Message sent</string>
    <string name="empty_fields">Some fields are empty</string>
    <string name="sending">Sending…</string>
    <string name="fetch_failed">Fetch failed</string>
    <string name="invalid_email">Invalid email address</string>
</resources>
