<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytItemParent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:targetApi="jelly_bean">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/lytFromPreviewParent"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle_background">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtFromPreview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:text="@string/default_m"
                android:textColor="@android:color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtFrom"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.7"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:maxLines="1"
                    android:paddingEnd="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/from"
                    android:textColor="@color/colorBlackText"
                    tools:ignore="RtlSymmetry" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.3"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="end"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/default_date"
                    android:textColor="@color/colorBlackText"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/subject"
                    android:textColor="@color/colorBlackText"
                    android:textSize="13sp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtSnippet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:text="@string/snippet"
                    android:textColor="@color/colorBlackText"
                    android:textSize="12sp" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:alpha="0.1"
        android:background="@android:color/black" />

</android.support.v7.widget.LinearLayoutCompat>