<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.EmailActivity"
    tools:targetApi="jelly_bean">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ToolbarTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ToolbarTheme"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:maxLines="2"
                android:padding="16dp"
                android:singleLine="false"
                android:text="@string/subject"
                android:textColor="@color/colorBlackText"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:alpha="0.1"
                android:background="@android:color/black" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                tools:ignore="WebViewLayout">

                <android.support.v7.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/lytFromPreviewParent"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_background">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/txtFromPreview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-thin"
                            android:text="@string/default_m"
                            android:textColor="@android:color/white"
                            android:textSize="18sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </android.support.constraint.ConstraintLayout>

                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/txtFrom"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-medium"
                            android:maxLines="2"
                            android:singleLine="false"
                            android:text="@string/from"
                            android:textColor="@color/colorBlackText"
                            android:textSize="16sp" />

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-light"
                            android:maxLines="2"
                            android:singleLine="false"
                            android:text="@string/to_me"
                            android:textColor="@color/colorBlackText"
                            android:textSize="12sp" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/txtDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:ellipsize="end"
                            android:fontFamily="sans-serif-light"
                            android:maxLines="2"
                            android:singleLine="false"
                            android:text="@string/default_date"
                            android:textColor="@color/colorBlackText"
                            android:textSize="12sp" />

                    </android.support.v7.widget.LinearLayoutCompat>

                </android.support.v7.widget.LinearLayoutCompat>

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:visibility="gone" />

                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/aviLoadingIndicator"
                    style="@style/AVLoadingIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="32dp"
                    android:visibility="visible"
                    app:indicatorColor="@android:color/darker_gray"
                    app:indicatorName="LineScaleIndicator" />

                <android.support.v7.widget.LinearLayoutCompat
                    android:id="@+id/lytError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif"
                        android:gravity="center"
                        android:padding="16dp"
                        android:text="@string/an_error_occurred"
                        android:textColor="@color/colorBlackText"
                        android:textSize="13sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnRetry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/retry"
                        android:textColor="@color/colorAccent"
                        android:textSize="12sp" />

                </android.support.v7.widget.LinearLayoutCompat>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>